# ATS-CMake

./: ATSCC.cmake  FindATS.cmake  FindZLOG.cmake  README.md
Examples/: Makefile  coin_change.dats  gcd.dats  lambda.sats  sum.dats
Examples/DepgenTest/: CMakeLists.txt  test.c  test.cats  test.h  test.hats  test1.dats  test1.sats  test1_dats.c  test1_sats.c  test2.dats  test2.sats  test2_dats.c  test2_sats.c
Examples/SimpleUsage/: CMakeLists.txt  test_fact.dats  test_fib.dats
Examples/SimpleUsage/cmake/: ATSCC.cmake
Examples/cmake/: FindATS.cmake
doc/: Makefile  make.bat
doc/source/: cmake.rst  conf.py  contacts.rst  examples.rst  index.rst  inside.rst  quick-demo.cmake  quick-start.rst  requirements.txt
doc/source/LocalModule/: CMakeLists.txt  lambda.dats  lambda_env.dats
doc/source/LocalModule/cmake/: ATSCC.cmake
doc/source/SimpleUsage/: CMakeLists.txt  output  prime.dats
