CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (SIMPLE_USAGE C)

#SET (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
#INCLUDE (ATSCC)

FIND_PACKAGE (ATS REQUIRED)
IF (NOT ATS_FOUND)
	MESSAGE (FATAL_ERROR "ATS Not Found!")
ENDIF ()

SET (LAMBDA lambda.sats lambda.dats lambda_env.dats)

ATS_COMPILE (GCD_SRC ${LAMBDA} gcd.dats)
ATS_COMPILE (PRIME_SRC ${LAMBDA} prime.dats)

ADD_EXECUTABLE (gcd ${GCD_SRC})
ADD_EXECUTABLE (prime ${PRIME_SRC})
